--- a/egov-persister/activity-persister.yml
+++ b/egov-persister/activity-persister.yml
@@ -14,7 +14,7 @@ serviceMaps:
       transactionCodeJsonPath: $.id
       auditAttributeBasePath: $.*
       queryMaps:
-        - query: INSERT INTO activity_assignments (id,tenant_id,field_plan_id,activity_id,start_date,end_date,assigned_to,assigned_by,additional_details,status,created_time,last_modified_time) VALUES (?,?,?,?,?,?,?,?,?,?,?,?);
+        - query: INSERT INTO activity_assignments (id,tenant_id,field_plan_id,activity_id,start_date,end_date,assigned_to,assigned_by,additional_details,role,status,created_time,last_modified_time) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?);
           basePath: $.ActivityAssignment.*
           jsonMaps:
             - jsonPath: $.ActivityAssignment.*.id
@@ -37,6 +37,10 @@ serviceMaps:
               type: JSON
               dbType: JSONB
 
+            - jsonPath: $.ActivityAssignment.*.role
+              type: JSON
+              dbType: JSONB
+
             - jsonPath: $.ActivityAssignment.*.status
 
             - jsonPath: $.ActivityAssignment.*.auditDetails.createdTime
@@ -44,9 +48,31 @@ serviceMaps:
             - jsonPath: $.ActivityAssignment.*.auditDetails.lastModifiedTime
 
     - version: 1.0
+      description: Deletes fieldplan activity
+      fromTopic: unassign-activity-assignment-topic
+      isTransaction: true
+      isAuditEnabled: true
+      module: PROJECT
+      objecIdJsonPath: $.id
+      tenantIdJsonPath: $.tenantId
+      userUuidJsonPath: $.[0].auditDetails.createdBy
+      transactionCodeJsonPath: $.id
+      auditAttributeBasePath: $.*
+      queryMaps:
+        - query: UPDATE activity_assignments SET last_modified_time=?, isDeleted=?, additional_details=? WHERE id=?;
+          basePath: $.ActivityAssignment.*
+          jsonMaps:
+            - jsonPath: $.ActivityAssignment.*.auditDetails.lastModifiedTime
+            - jsonPath: $.ActivityAssignment.*.isDeleted
+            - jsonPath: $.ActivityAssignment.*.additionalDetails
+              type: JSON
+              dbType: JSONB
+            - jsonPath: $.*.id
+
+    - version: 1.0
       name: Activity
       description: Persists Activity Facility details in Activity Facility table
-      fromTopic: save-activity-assignment-topic
+      fromTopic: save-activity-facility-topic
       isTransaction: true
       isAuditEnabled: true
       module: Activity
