--- a/egov-indexer/escalation-status-indexer.yml
+++ b/egov-indexer/escalation-status-indexer.yml
@@ -9,7 +9,7 @@ ServiceMaps:
         type: general
         id: $.escalationId + "_" + $.tenantId + "_" + $.recipientRole + "_" + $.escalationTime
         jsonPath: $
-        timeStampField: $.Data.escalationStatus.escalationTime
+        timeStampField: $.escalationTime
         fieldsToBeMasked: []
         customJsonMapping:
           indexMapping: {"Data":{"escalationStatus":{}}}
