--- a/egov-persister/im-services-persister.yml
+++ b/egov-persister/im-services-persister.yml
@@ -16,8 +16,8 @@ serviceMaps:
             INSERT INTO eg_incident_v2(id, tenantid, incidenttype,
             incidentsubtype, incidentid, additionaldetails, applicationstatus,
             district, block, phctype, phcsubtype, createdby, createdtime,
-            lastmodifiedby, lastmodifiedtime, comments,accountid, reportertenant,reportertype,systemfunctional, fileddate, legacyid, migrationid) VALUES (?, ?, ?, ?, ?,
-            ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ? , ? , ?, ?, ?, ?, ?, ?);
+            lastmodifiedby, lastmodifiedtime, comments,accountid, reportertenant,reportertype,systemfunctional, fileddate, legacyid, migrationid, ispotentialduplicate) VALUES (?, ?, ?, ?, ?,
+            ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ? , ? , ?, ?, ?, ?, ?, ?, ?);
           basePath: $.incident
           jsonMaps:
             - jsonPath: $.incident.id
@@ -45,6 +45,7 @@ serviceMaps:
             - jsonPath: $.incident.filedDate
             - jsonPath: $.incident.legacyId
             - jsonPath: $.incident.migrationId
+            - jsonPath: $.incident.isPotentialDuplicate
 
     - version: 1
       description: Updates im service request in tables
@@ -61,7 +62,7 @@ serviceMaps:
             UPDATE eg_incident_v2 SET incidenttype=?, incidentid=?,
             incidentsubtype=?, additionaldetails=?, applicationstatus=?,
             district=? , block=? , phctype=? , phcsubtype=?, lastmodifiedby=?,
-            lastmodifiedtime=?, comments=?, systemfunctional=?, fileddate=? , legacyid=? , migrationid=? WHERE id=?;
+            lastmodifiedtime=?, comments=?, systemfunctional=?, fileddate=? , legacyid=? , migrationid=?, ispotentialduplicate=? WHERE id=?;
           basePath: $.incident
           jsonMaps:
             - jsonPath: $.incident.incidentType
@@ -82,4 +83,5 @@ serviceMaps:
             - jsonPath: $.incident.filedDate
             - jsonPath: $.incident.legacyId
             - jsonPath: $.incident.migrationId
+            - jsonPath: $.incident.isPotentialDuplicate
             - jsonPath: $.incident.id
