Update asset registry persister

--- a/egov-persister/asset-persister.yml
+++ b/egov-persister/asset-persister.yml
@@ -6,13 +6,14 @@ serviceMaps:
       fromTopic: save-asset
       isTransaction: true
       queryMaps:
-        - query: INSERT INTO asset (asset_id, tenant_id, system, facility_id, asset_type_id, serial_number, model_number, brand_id, asset_details, warranty_start_date, warranty_duration, warranty_end_date, wf_status, is_active, additional_details, created_by, created_time, last_modified_by, last_modified_time) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
+        - query: INSERT INTO asset (asset_id, tenant_id, system, facility_id, activity_facility_id, asset_type_id, serial_number, model_number, brand_id, asset_details, warranty_start_date, warranty_duration, warranty_end_date, wf_status, is_active, additional_details, created_by, created_time, last_modified_by, last_modified_time) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?);
           basePath: $
           jsonMaps:
             - jsonPath: $.assetId
             - jsonPath: $.tenantId
             - jsonPath: $.system
             - jsonPath: $.facilityID
+            - jsonPath: $.activityFacilityID
             - jsonPath: $.assetTypeID
             - jsonPath: $.serialNumber
             - jsonPath: $.modelNumber
@@ -64,12 +65,13 @@ serviceMaps:
       fromTopic: update-asset
       isTransaction: true
       queryMaps:
-        - query: UPDATE asset SET tenant_id = ?, system = ?, facility_id = ?, asset_type_id = ?, serial_number = ?, model_number = ?, brand_id = ?, asset_details = ?, warranty_start_date = ?, warranty_duration = ?, warranty_end_date = ?, wf_status = ?, is_active = ?,is_operational = ?, additional_details = ?, last_modified_by = ?, last_modified_time = ? WHERE asset_id = ?;
+        - query: UPDATE asset SET tenant_id = ?, system = ?, facility_id = ?, activity_facility_id = ?, asset_type_id = ?, serial_number = ?, model_number = ?, brand_id = ?, asset_details = ?, warranty_start_date = ?, warranty_duration = ?, warranty_end_date = ?, wf_status = ?, is_active = ?,is_operational = ?, additional_details = ?, last_modified_by = ?, last_modified_time = ? WHERE asset_id = ?;
           basePath: $
           jsonMaps:
             - jsonPath: $.tenantId
             - jsonPath: $.system
             - jsonPath: $.facilityID
+            - jsonPath: $.activityFacilityID
             - jsonPath: $.assetTypeID
             - jsonPath: $.serialNumber
             - jsonPath: $.modelNumber
