--- a/egov-persister/field-plan-persister.yml
+++ b/egov-persister/field-plan-persister.yml
@@ -117,7 +117,7 @@ serviceMaps:
       transactionCodeJsonPath: $.id
       auditAttributeBasePath: $.*
       queryMaps:
-        - query: INSERT INTO field_plan_facilities (id, tenantid, field_plan_id, facility_id, additional_details, last_modified_by, created_time, lastmodifiedtime, isdeleted) VALUES (?,?,?,?,?,?,?,?,?);
+        - query: INSERT INTO field_plan_facilities (id, tenantid, field_plan_id, facility_id, additional_details, last_modified_by, created_time, lastmodifiedtime, isdeleted) VALUES (?,?,?,?,?,?,?,?,?) ON CONFLICT (tenantid, field_plan_id, facility_id) DO UPDATE SET isdeleted = ?, last_modified_by = ?, lastmodifiedtime = ?
           basePath: $.*
           jsonMaps:
             - jsonPath: $.*.id
@@ -139,6 +139,12 @@ serviceMaps:
             - jsonPath: $.*.auditDetails.lastModifiedTime
 
             - jsonPath: $.*.isdeleted
+
+            - jsonPath: $.*.isdeleted
+
+            - jsonPath: $.*.auditDetails.lastModifiedBy
+
+            - jsonPath: $.*.auditDetails.lastModifiedTime
 
     - version: 1.0
       description: Deletes FieldPlan Facility
