added fields to im-services and audit-im-services topic

--- a/egov-indexer/im-services.yml
+++ b/egov-indexer/im-services.yml
@@ -39,6 +39,10 @@ ServiceMaps:
                 outJsonPath: $.Data.block
               - inJsonPath: $.incidentRequest.incident.phcType
                 outJsonPath: $.Data.phcType
+              - inJsonPath: $.incidentRequest.incident.facilityId
+                outJsonPath: $.Data.facilityId
+              - inJsonPath: $.incidentRequest.incident.boundaryCode
+                outJsonPath: $.Data.boundaryCode
               - inJsonPath: $.@timestamp
                 outJsonPath: $.Data.@timestamp
               - inJsonPath: $.incidentRequest.incident.auditDetails
@@ -90,6 +94,10 @@ ServiceMaps:
                 outJsonPath: $.Data.block
               - inJsonPath: $.incidentRequest.incident.phcType
                 outJsonPath: $.Data.phcType
+              - inJsonPath: $.incidentRequest.incident.facilityId
+                outJsonPath: $.Data.facilityId
+              - inJsonPath: $.incidentRequest.incident.boundaryCode
+                outJsonPath: $.Data.boundaryCode
               - inJsonPath: $.@timestamp
                 outJsonPath: $.Data.@timestamp
               - inJsonPath: $.incidentRequest.incident.auditDetails
@@ -185,6 +193,10 @@ ServiceMaps:
                 outJsonPath: $.Data.block
               - inJsonPath: $.incidentRequest.incident.phcType
                 outJsonPath: $.Data.phcType
+              - inJsonPath: $.incidentRequest.incident.facilityId
+                outJsonPath: $.Data.facilityId
+              - inJsonPath: $.incidentRequest.incident.boundaryCode
+                outJsonPath: $.Data.boundaryCode
               - inJsonPath: $.@timestamp
                 outJsonPath: $.Data.@timestamp
               - inJsonPath: $.incidentRequest.incident.auditDetails
@@ -236,6 +248,10 @@ ServiceMaps:
                 outJsonPath: $.Data.block
               - inJsonPath: $.incidentRequest.incident.phcType
                 outJsonPath: $.Data.phcType
+              - inJsonPath: $.incidentRequest.incident.facilityId
+                outJsonPath: $.Data.facilityId
+              - inJsonPath: $.incidentRequest.incident.boundaryCode
+                outJsonPath: $.Data.boundaryCode
               - inJsonPath: $.@timestamp
                 outJsonPath: $.Data.@timestamp
               - inJsonPath: $.incidentRequest.incident.auditDetails
@@ -326,6 +342,10 @@ ServiceMaps:
                 outJsonPath: $.Data.block
               - inJsonPath: $.incident.phcType
                 outJsonPath: $.Data.phcType
+              - inJsonPath: $.incident.facilityId
+                outJsonPath: $.Data.facilityId
+              - inJsonPath: $.incident.boundaryCode
+                outJsonPath: $.Data.boundaryCode
               - inJsonPath: $.@timestamp
                 outJsonPath: $.Data.@timestamp
               - inJsonPath: $.incident.auditDetails
@@ -414,6 +434,10 @@ ServiceMaps:
                 outJsonPath: $.Data.block
               - inJsonPath: $.incidentRequest.incident.phcType
                 outJsonPath: $.Data.phcType
+              - inJsonPath: $.incidentRequest.incident.facilityId
+                outJsonPath: $.Data.facilityId
+              - inJsonPath: $.incidentRequest.incident.boundaryCode
+                outJsonPath: $.Data.boundaryCode
               - inJsonPath: $.@timestamp
                 outJsonPath: $.Data.@timestamp
               - inJsonPath: $.incidentRequest.incident.auditDetails
