Update im-service indexer

--- a/egov-indexer/im-services.yml
+++ b/egov-indexer/im-services.yml
@@ -49,6 +49,8 @@ ServiceMaps:
                 outJsonPath: $.Data.systemFunctional
               - inJsonPath: $.incidentRequest.incident.isPotentialDuplicate
                 outJsonPath: $.Data.isPotentialDuplicate
+              - inJsonPath: $.incidentRequest.incident.isPotentialDuplicateLocalized
+                outJsonPath: $.Data.isPotentialDuplicateLocalized
               - inJsonPath: $.incidentRequest.incident.filedDate
                 outJsonPath: $.Data.filedDate
               - inJsonPath: $.incidentRequest.incident.legacyId
@@ -100,6 +102,8 @@ ServiceMaps:
                 outJsonPath: $.Data.systemFunctional
               - inJsonPath: $.incidentRequest.incident.isPotentialDuplicate
                 outJsonPath: $.Data.isPotentialDuplicate
+              - inJsonPath: $.incidentRequest.incident.isPotentialDuplicateLocalized
+                outJsonPath: $.Data.isPotentialDuplicateLocalized
               - inJsonPath: $.updatedProcessInstance.state.sla
                 outJsonPath: $.Data.slaRemaining
               - inJsonPath: $.updatedProcessInstance.state.sla
@@ -195,6 +199,8 @@ ServiceMaps:
                 outJsonPath: $.Data.systemFunctional
               - inJsonPath: $.incidentRequest.incident.isPotentialDuplicate
                 outJsonPath: $.Data.isPotentialDuplicate
+              - inJsonPath: $.incidentRequest.incident.isPotentialDuplicateLocalized
+                outJsonPath: $.Data.isPotentialDuplicateLocalized
               - inJsonPath: $.incidentRequest.incident.filedDate
                 outJsonPath: $.Data.filedDate
               - inJsonPath: $.incidentRequest.incident.legacyId
@@ -246,6 +252,8 @@ ServiceMaps:
                 outJsonPath: $.Data.systemFunctional
               - inJsonPath: $.incidentRequest.incident.isPotentialDuplicate
                 outJsonPath: $.Data.isPotentialDuplicate
+              - inJsonPath: $.incidentRequest.incident.isPotentialDuplicateLocalized
+                outJsonPath: $.Data.isPotentialDuplicateLocalized
               - inJsonPath: $.updatedProcessInstance.state.sla
                 outJsonPath: $.Data.slaRemaining
               - inJsonPath: $.updatedProcessInstance.state.sla
@@ -424,6 +432,8 @@ ServiceMaps:
                 outJsonPath: $.Data.systemFunctional
               - inJsonPath: $.incidentRequest.incident.isPotentialDuplicate
                 outJsonPath: $.Data.isPotentialDuplicate
+              - inJsonPath: $.incidentRequest.incident.isPotentialDuplicateLocalized
+                outJsonPath: $.Data.isPotentialDuplicateLocalized
               - inJsonPath: $.updatedProcessInstance.state.sla
                 outJsonPath: $.Data.slaRemaining
               - inJsonPath: $.updatedProcessInstance.state.sla
