Update asset persister file

--- a/egov-persister/asset-persister.yml
+++ b/egov-persister/asset-persister.yml
@@ -94,3 +94,15 @@ serviceMaps:
             - jsonPath: $.auditDetails.lastModifiedTime
               type: LONG
             - jsonPath: $.assetId
+
+        - query: UPDATE asset_documents set filestore_id = ?, document_type = ?, latitude = ?, longitude = ?, additional_details = ? where id = ?;
+          basePath: $.documents.*
+          jsonMaps:
+            - jsonPath: $.documents.*.fileStore
+            - jsonPath: $.documents.*.documentType
+            - jsonPath: $.documents.*.geoLocation.latitude
+            - jsonPath: $.documents.*.geoLocation.longitude
+            - jsonPath: $.additionalDetails
+              type: JSON
+              dbType: JSONB
+            - jsonPath: $.documents.*.id
